--- a/404.html
+++ b/404.html
@@ -1,4 +1,5 @@
 ---
+title: Well, that's odd
 layout: default
 ---
 
@@ -17,8 +18,6 @@ layout: default
 </style>
 
 <div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
+  <p><img src="assets/img/common/404-owl.jpg"/></p>
   <p>The requested page could not be found.</p>
 </div>
