--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 ---
-title: Well, that's odd
+title: Well, that Shouldn't Happen
 layout: default
 ---
 
@@ -18,6 +18,7 @@ layout: default
 </style>
 
 <div class="container">
+  <h1>404</h1>
   <p><img src="assets/img/common/404-owl.jpg"/></p>
-  <p>The requested page could not be found.</p>
+  <p>The requested page could not be found.<br/>I am skeptical that you entered that address correctly.</p>
 </div>
