Add Slack theme to solarized page

--- a/solarized.html
+++ b/solarized.html
@@ -289,6 +289,16 @@ a:visited {
 }
         </pre>
 
+        <h2>Slack</>
+
+        <p>
+        In Slack, go to preferences, then themes, click on custom theme and past the following into the text box.
+        </p>
+
+        <pre>
+        #FDF6E3,#EEE8D5,#93A1A1,#FDF6E3,#EEE8D5,#657B83,#2AA198,#DC322F,#FDF6E3,#657B83
+        </pre>
+
     <p>&nbsp;</p>
     </body>
 </html>
